--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,8 @@
+body {
+    font-family: "Fraunces";
+    text-align: justify;
+}
+
 @media screen and (min-width: 480px) {
     .container {
         display: grid;
