--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,11 @@
-body {
-    font-family: "Fraunces";
-    text-align: justify;
-}
-
 @media screen and (min-width: 480px) {
+    body {
+        font-family: "Fraunces";
+        text-align: justify;
+        max-width: 50vw;
+        margin: 0 auto;
+    }
+
     .container {
         display: grid;
         grid-template-columns: 100%;
@@ -15,6 +17,8 @@ body {
             "upper"
             "middle"
             "lower";
+        place-items: center;
+        justify-content: center;
     }
 
     .header {
@@ -28,6 +32,10 @@ body {
             ". egg ."
             ". brand .";
         grid-area: header;
+
+        img {
+            width: 100%;
+        }
     }
 
     .orange {
