--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,10 @@
     font-family: "Fraunces";
     text-align: justify;
     box-sizing: border-box;
-    width: 100%;
+    width: 100vw;
     place-items: center;
     justify-content: center;
+    font-size: 2.6667vw;
   }
   .container {
     display: flex;
@@ -16,8 +17,8 @@
   }
   .container .fake_header {
     background-color: rgb(62, 191, 255);
-    height: 10vh;
-    margin-bottom: -2vh;
+    height: 20vh;
+    margin-bottom: -2vw;
   }
   .container .fake_header img[alt=logo] {
     position: relative;
@@ -30,8 +31,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-clip: content-box;
     height: 105vw;
-    width: 100%;
+    width: 100vw;
     align-items: center;
   }
   .container .header .slogan {
@@ -44,11 +46,19 @@
     text-transform: uppercase;
     text-align: center;
     color: white;
-    top: 12vw;
+    margin-top: -7vw;
     letter-spacing: 1.2vw;
   }
   .container .header .slogan img[alt=arrow] {
-    height: 20vh;
-    margin-top: 7vh;
+    height: 20vw;
+    margin-top: 7vw;
+    position: relative;
+  }
+  .egg img {
+    height: 60vw;
+    width: 100vw;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin-bottom: 0;
   }
 }/*# sourceMappingURL=style.css.map */
