--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-@media screen and (min-width: 280px) and (max-width: 700px) {
+@media screen and (min-width: 280px) and (max-width: 768px) {
   body {
     font-family: "Fraunces", serif;
     text-align: justify;
@@ -30,7 +30,7 @@
     font-weight: 900;
     text-transform: uppercase;
     color: #24303E;
-    font-size: 0.9em;
+    font-size: 4.5vw;
   }
   .container .learn_more:visited {
     color: #24303E;
@@ -75,7 +75,7 @@
     position: relative;
     top: 5vw;
   }
-  .container .egg img {
+  .container .egg img, .container .glass img {
     height: 60vw;
     width: 100%;
     -o-object-fit: cover;
@@ -91,25 +91,177 @@
   }
   .container .brand h1, .container .audience h1 {
     color: #24303E;
-    font-size: 2rem;
     font-weight: 900;
-    font-size: calc(16px + 1em);
+    font-size: calc(10px + 8vw);
   }
   .container .brand p, .container .audience p {
     font-family: "Barlow", sans-serif;
     font-weight: 600;
     color: #808397;
-    padding-top: calc(10px + 2.2vw);
-    line-height: 1.875rem;
-  }
-  .container .glass img {
-    height: 60vw;
-    width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    margin-bottom: 0;
+    padding-top: 5vw;
+    line-height: 7vw;
+    font-size: calc(8px + 3vw);
   }
   .container .audience {
     text-align: center;
+  }
+  .container .graphic_design {
+    background: url(../images/photos/image-graphic-design.jpg) no-repeat;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-clip: content-box;
+    height: 200vw;
+    width: 98vw;
+    align-items: center;
+    margin-top: -1%;
+  }
+  .container .graphic_design h1 {
+    position: relative;
+    top: 110vw;
+    text-align: center;
+    font-weight: 900;
+    color: #24554A;
+    font-size: calc(10px + 8vw);
+  }
+  .container .graphic_design p {
+    font-family: "Barlow", sans-serif;
+    font-weight: 600;
+    color: #24554A;
+    line-height: 7vw;
+    text-align: center;
+    margin-top: 120vw;
+    font-size: calc(8px + 3vw);
+  }
+  .container .orange_full {
+    background-image: url(../images/photos/image-photography.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-clip: content-box;
+    height: 170vw;
+    width: 98vw;
+    align-items: center;
+  }
+  .container .orange_full h1 {
+    position: relative;
+    top: 100vw;
+    text-align: center;
+    font-weight: 900;
+    color: #052C3B;
+    font-size: calc(10px + 8vw);
+  }
+  .container .orange_full p {
+    font-family: "Barlow", sans-serif;
+    font-weight: 600;
+    color: #19536C;
+    line-height: 7vw;
+    text-align: center;
+    margin-top: 105vw;
+    font-size: calc(8px + 3vw);
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+  .container .testimonials {
+    display: block;
+    padding-top: 15vw;
+    padding-bottom: 15vw;
+  }
+  .container .testimonials h1 {
+    font-size: 5vw;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #A7AAAD;
+  }
+  .container .testimony {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    place-content: center;
+    margin-bottom: 10vw;
+  }
+  .container .testimony .quote {
+    text-align: center;
+    padding: 3vw;
+  }
+  .container .testimony .quote p {
+    padding-top: 5vw;
+    font-family: "Barlow", sans-serif;
+    color: #5B636D;
+    padding-bottom: 10vw;
+    font-size: 4.5vw;
+  }
+  .container .testimony .quote .name {
+    font-size: 5vw;
+    font-weight: 900;
+    margin-top: -3vw;
+  }
+  .container .testimony .quote .job {
+    font-family: "Barlow", sans-serif;
+    font-size: 4.5vw;
+    font-weight: 600;
+    color: #A7AAAD;
+    padding-top: 2.5vw;
+  }
+  .container .testimony img {
+    border-radius: 50%;
+    width: 30vw;
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .container .patchwork {
+    display: flex;
+    flex-direction: row;
+  }
+  .container article img {
+    width: 100%;
+    height: auto;
+    margin-top: -2vw;
+  }
+  .container .footer {
+    background-color: #90D4C6;
+    margin-top: -1.5vw;
+    padding-top: 5vw;
+    height: 90vw;
+  }
+  .container .footer .logo_bottom img {
+    width: 50vw;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: block;
+  }
+  .container .footer .nav_bottom {
+    flex-direction: row;
+    place-items: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 20vw;
+  }
+  .container .footer .nav_bottom a {
+    padding-right: 8vw;
+    padding-left: 8vw;
+    font-family: "Barlow", sans-serif;
+    font-size: 4.5vw;
+    font-weight: 600;
+    text-decoration: none;
+    color: #458D7E;
+  }
+  .container .footer .nav_socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 15vw;
+  }
+  .container .footer .nav_socials img {
+    padding-left: 3.5vw;
+    padding-right: 3.5vw;
   }
 }/*# sourceMappingURL=style.css.map */
