--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,338 +1,484 @@
-$titles: 'Fraunces', serif;
-$p: 'Barlow', sans-serif;
-$greyish: #24303E;
+$titles: "Fraunces", serif;
+$p: "Barlow", sans-serif;
+$greyish: #24303e;
 $light-greyish: #808397;
-$dark-greenish: #24554A;
-$dark-blueish: #052C3B;
-$light-blueish: #19536C;
-$light-grey: #A7AAAD;
-$testimony: #5B636D;
-$footer-bg: #90D4C6;
-$footer-links: #458D7E;
+$dark-greenish: #24554a;
+$dark-blueish: #052c3b;
+$light-blueish: #19536c;
+$light-grey: #a7aaad;
+$testimony: #5b636d;
+$footer-bg: #90d4c6;
+$footer-links: #458d7e;
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
-    body {
-        font-family: $titles;
-        text-align: justify;
-        box-sizing: border-box;
-        place-items: center;
-        font-size: 18px;
-        width: 98vw;
-        margin: 0 1vw;
+// body {
+//   font-family: $titles;
+//   text-align: justify;
+//   box-sizing: border-box;
+//   place-items: center;
+//   font-size: 18px;
+//   width: 98vw;
+//   margin: 0 1vw;
+// }
+
+// .container {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   place-content: center;
+//   vertical-align: center;
+//   width: 100%;
+
+//   .learn_more {
+//     margin-top: calc(10px + 5vw);
+
+//     a {
+//       text-decoration: none;
+//       font-family: $titles;
+//       font-weight: 900;
+//       text-transform: uppercase;
+//       color: #24303e;
+//       font-size: 4.5vw;
+//     }
+
+//     &:visited {
+//       color: #24303e;
+//     }
+//   }
+
+//   .fake_header {
+//     background-color: rgb(62, 191, 255);
+//     height: calc(25px + 7vh);
+//     margin-top: 0;
+
+//     img[alt="logo"] {
+//       position: relative;
+//       top: 20%;
+//       left: 3%;
+//       width: calc(25vw + 1em);
+//     }
+
+//     .nav_top {
+//       display: none;
+//     }
+
+//     .hamburger {
+//       position: fixed;
+//       right: 5vw;
+//       top: 2vw;
+//     }
+//   }
+
+//   .header {
+//     background-image: url(../images/photos/image-header.jpg);
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     background-clip: content-box;
+//     height: 105vw;
+//     width: 100%;
+//     align-items: center;
+//     margin-top: -1%;
+
+//     .slogan {
+//       width: 100%;
+//       padding-top: calc(1.2em + 0.5vh);
+//       line-height: calc(1em + 5vh);
+
+//       font: {
+//         family: $titles;
+//         weight: 900;
+//         size: calc(10px + 3vw);
+//       }
+
+//       text-transform: uppercase;
+//       text-align: center;
+//       color: white;
+//       margin-top: -7vw;
+//       letter-spacing: 1.2vw;
+
+//       img[alt="arrow"] {
+//         height: 25vw;
+//         position: relative;
+//         top: 5vw;
+//       }
+//     }
+//   }
+
+//   .egg {
+//     img {
+//       height: 60vw;
+//       width: 100%;
+//       object-fit: cover;
+//       margin-bottom: 0;
+//     }
+//   }
+
+//   .brand {
+//     text-align: center;
+//     margin: 0 auto;
+//     width: 90vw;
+//     padding-top: 10vw;
+//     padding-bottom: calc(5px + 10vw);
+
+//     h1 {
+//       color: #24303e;
+//       font-weight: 900;
+//       font-size: calc(10px + 8vw);
+//     }
+
+//     p {
+//       font-family: $p;
+//       font-weight: 600;
+//       color: #808397;
+//       padding-top: 5vw;
+//       line-height: 7vw;
+//       font-size: calc(8px + 3vw);
+//     }
+//   }
+
+//   .glass {
+//     @extend .egg;
+//   }
+
+//   .audience {
+//     @extend .brand;
+//     text-align: center;
+//   }
+
+//   .graphic_design {
+//     background: url(../images/photos/image-graphic-design.jpg) no-repeat;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     background-clip: content-box;
+//     height: 200vw;
+//     width: 98vw;
+//     align-items: center;
+//     margin-top: -1%;
+
+//     h1 {
+//       position: relative;
+//       top: 110vw;
+//       text-align: center;
+//       font-weight: 900;
+//       color: $dark-greenish;
+//       font-size: calc(10px + 8vw);
+//     }
+
+//     p {
+//       font-family: $p;
+//       font-weight: 600;
+//       color: $dark-greenish;
+//       line-height: 7vw;
+//       text-align: center;
+//       margin-top: 120vw;
+//       font-size: calc(8px + 3vw);
+//     }
+//   }
+
+//   .orange_full {
+//     background-image: url(../images/photos/image-photography.jpg);
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     background-clip: content-box;
+//     height: 170vw;
+//     width: 98vw;
+//     align-items: center;
+
+//     h1 {
+//       position: relative;
+//       top: 100vw;
+//       text-align: center;
+//       font-weight: 900;
+//       color: $dark-blueish;
+//       font-size: calc(10px + 8vw);
+//     }
+
+//     p {
+//       font-family: $p;
+//       font-weight: 600;
+//       color: $light-blueish;
+//       line-height: 7vw;
+//       text-align: center;
+//       margin-top: 105vw;
+//       font-size: calc(8px + 3vw);
+//       margin-left: 2vw;
+//       margin-right: 2vw;
+//     }
+//   }
+
+//   .testimonials {
+//     display: block;
+//     padding-top: 15vw;
+//     padding-bottom: 15vw;
+
+//     h1 {
+//       font-size: 5vw;
+//       text-align: center;
+//       text-transform: uppercase;
+//       font-weight: 900;
+//       color: $light-grey;
+//     }
+//   }
+
+//   .testimony {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     place-content: center;
+//     margin-bottom: 10vw;
+
+//     .quote {
+//       text-align: center;
+//       padding: 3vw;
+
+//       p {
+//         padding-top: 5vw;
+//         font-family: $p;
+//         color: $testimony;
+//         padding-bottom: 10vw;
+//         font-size: 4.5vw;
+//       }
+
+//       .name {
+//         font-size: 5vw;
+//         font-weight: 900;
+//         margin-top: -3vw;
+//       }
+
+//       .job {
+//         font-family: $p;
+//         font-size: 4.5vw;
+//         font-weight: 600;
+//         color: $light-grey;
+//         padding-top: 2.5vw;
+//       }
+//     }
+
+//     img {
+//       border-radius: 50%;
+//       width: 30vw;
+//       height: auto;
+//       object-fit: cover;
+//     }
+//   }
+
+//   .patchwork {
+//     display: flex;
+//     flex-direction: row;
+//   }
+
+//   article {
+//     img {
+//       width: 100%;
+//       height: auto;
+//       margin-top: -2vw;
+//     }
+//   }
+
+//   .footer {
+//     background-color: $footer-bg;
+//     margin-top: -1.5vw;
+//     padding-top: 5vw;
+//     height: 90vw;
+
+//     .logo_bottom {
+//       img {
+//         width: 50vw;
+//         position: relative;
+//         top: 0;
+//         bottom: 0;
+//         left: 0;
+//         right: 0;
+//         margin: auto;
+//         display: block;
+//         margin-top: 15vw;
+//       }
+//     }
+
+//     .nav_bottom {
+//       flex-direction: row;
+//       place-items: center;
+//       justify-content: center;
+//       align-items: center;
+//       text-align: center;
+//       margin-top: 10vw;
+
+//       & a {
+//         padding-right: 8vw;
+//         padding-left: 8vw;
+//         font: {
+//           family: $p;
+//           size: 4.5vw;
+//           weight: 600;
+//         }
+//         text-decoration: none;
+//         color: $footer-links;
+//       }
+//     }
+
+//     .nav_socials {
+//       display: flex;
+//       flex-direction: row;
+//       justify-content: center;
+//       margin-top: 25vw;
+
+//       & img {
+//         padding-left: 3.5vw;
+//         padding-right: 3.5vw;
+//       }
+//     }
+//   }
+// }
+
+@media screen and (min-width: 769px) {
+  body {
+    width: 99%;
+    margin: 0 auto;
+    display: flex;
+    list-style: none;
+    overflow-x: hidden;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    place-content: center;
+    vertical-align: center;
+    width: 100vw;
+
+    .fake_header {
+      background-color: rgb(62, 191, 255);
+      height: calc(25px + 7vh);
+      margin-top: 0;
+      display: flex;
+      align-content: center;
+
+      .logo {
+        position: absolute;
+        top: 2vw;
+        left: 3vw;
+        height: 2.5vw;
+      }
+
+      .hamburger {
+        display: none;
+      }
+
+      .nav_top {
+        li {
+          display: inline-block;
+          margin-left: 1.5vw;
+          margin-right: 2vw;
+          margin-top: 1vw;
+          color: #fff;
+          text-align: center;
+          font-family: $p;
+          font-weight: 600;
+          font-size: 1.5vw;
+        }
+        #contact {
+          color: black;
+          background-color: white;
+          font-family: $titles;
+          font-weight: 700;
+          border-radius: 3.7333vw;
+          padding-left: 1.5vw;
+          padding-right: 1.5vw;
+          padding-top: 0.8vw;
+          padding-bottom: 0.8vw;
+          font-size: 1.5vw;
+        }
+
+        position: absolute;
+        right: 1vw;
+        top: 0.5vw;
+      }
     }
 
-    .container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        place-content: center;
-        vertical-align: center;
-        width: 100%;
+    .header {
+      background-image: url(../images/photos/image-header.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      height: 80vh;
+      width: 100%;
+      margin-top: -5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
 
-        .learn_more {
-            margin-top: calc(10px + 5vw);
+      .slogan {
+        h1 {
+          font: {
+            family: $titles;
+            weight: 900;
+            size: 5vw;
+          }
 
-            a {
-                text-decoration: none;
-                font-family: $titles;
-                font-weight: 900;
-                text-transform: uppercase;
-                color: #24303E;
-                font-size: 4.5vw;
-            }
-
-            &:visited {
-                color: #24303E;
-            }
+          color: #fff;
+          text-transform: uppercase;
+          letter-spacing: 1vw;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          margin-top: 12vw;
         }
 
-        .fake_header {
-            background-color: rgb(62, 191, 255);
-            height: calc(25px + 7vh);
-            margin-top: 0;
-
-            img[alt="logo"] {
-                position: relative;
-                top: 20%;
-                left: 3%;
-                width: calc(25vw + 1em);
-            }
+        img {
+          margin-top: 5vw;
+          height: 10vw;
         }
-
-        .header {
-            background-image: url(../images/photos/image-header.jpg);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            background-clip: content-box;
-            height: 105vw;
-            width: 100%;
-            align-items: center;
-            margin-top: -1%;
-
-            .slogan {
-                width: 100%;
-                padding-top: calc(1.2em + .5vh);
-                line-height: calc(1em + 5vh);
-
-                font: {
-                    family: $titles;
-                    weight: 900;
-                    size: calc(10px + 3vw);
-                }
-
-                text-transform: uppercase;
-                text-align: center;
-                color: white;
-                margin-top: -7vw;
-                letter-spacing: 1.2vw;
-
-                img[alt="arrow"] {
-                    height: 25vw;
-                    position: relative;
-                    top: 5vw;
-                }
-            }
-        }
-
-        .egg {
-            img {
-                height: 60vw;
-                width: 100%;
-                object-fit: cover;
-                margin-bottom: 0;
-            }
-        }
-
-        .brand {
-            text-align: center;
-            margin: 0 auto;
-            width: 90vw;
-            padding-top: 10vw;
-            padding-bottom: calc(5px + 10vw);
-
-            h1 {
-                color: #24303E;
-                font-weight: 900;
-                font-size: calc(10px + 8vw);
-            }
-
-            p {
-                font-family: $p;
-                font-weight: 600;
-                color: #808397;
-                padding-top: 5vw;
-                line-height: 7vw;
-                font-size: calc(8px + 3vw);
-            }
-        }
-
-        .glass {
-            @extend .egg;
-        }
-
-        .audience {
-            @extend .brand;
-            text-align: center;
-        }
-
-        .graphic_design {
-            background: url(../images/photos/image-graphic-design.jpg) no-repeat;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            background-clip: content-box;
-            height: 200vw;
-            width: 98vw;
-            align-items: center;
-            margin-top: -1%;
-
-            h1 {
-                position: relative;
-                top: 110vw;
-                text-align: center;
-                font-weight: 900;
-                color: $dark-greenish;
-                font-size: calc(10px + 8vw);
-            }
-
-            p {
-                font-family: $p;
-                font-weight: 600;
-                color: $dark-greenish;
-                line-height: 7vw;
-                text-align: center;
-                margin-top: 120vw;
-                font-size: calc(8px + 3vw);
-            }
-        }
-
-        .orange_full {
-            background-image: url(../images/photos/image-photography.jpg);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            background-clip: content-box;
-            height: 170vw;
-            width: 98vw;
-            align-items: center;
-
-            h1 {
-                position: relative;
-                top: 100vw;
-                text-align: center;
-                font-weight: 900;
-                color: $dark-blueish;
-                font-size: calc(10px + 8vw);
-            }
-
-            p {
-                font-family: $p;
-                font-weight: 600;
-                color: $light-blueish;
-                line-height: 7vw;
-                text-align: center;
-                margin-top: 105vw;
-                font-size: calc(8px + 3vw);
-                margin-left: 2vw;
-                margin-right: 2vw;
-            }
-        }
-
-        .testimonials {
-            display: block;
-            padding-top: 15vw;
-            padding-bottom: 15vw;
-
-            h1 {
-                font-size: 5vw;
-                text-align: center;
-                text-transform: uppercase;
-                font-weight: 900;
-                color: $light-grey;
-            }
-        }
-
-
-
-        .testimony {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            place-content: center;
-            margin-bottom: 10vw;
-
-            .quote {
-                text-align: center;
-                padding: 3vw;
-
-
-                p {
-                    padding-top: 5vw;
-                    font-family: $p;
-                    color: $testimony;
-                    padding-bottom: 10vw;
-                    font-size: 4.5vw;
-                }
-
-                .name {
-                    font-size: 5vw;
-                    font-weight: 900;
-                    margin-top: -3vw;
-                }
-
-                .job {
-                    font-family: $p;
-                    font-size: 4.5vw;
-                    font-weight: 600;
-                    color: $light-grey;
-                    padding-top: 2.5vw;
-                }
-            }
-
-            img {
-                border-radius: 50%;
-                width: 30vw;
-                height: auto;
-                object-fit: cover;
-            }
-        }
-
-        .patchwork {
-
-            display: flex;
-            flex-direction: row;
-        }
-
-        article {
-            img {
-                width: 100%;
-                height: auto;
-                margin-top: -2vw;
-            }
-        }
-
-        .footer {
-            background-color: $footer-bg;
-            margin-top: -1.5vw;
-            padding-top: 5vw;
-            height: 90vw;
-
-
-            .logo_bottom {
-                img {
-                    width: 50vw;
-                    position: relative;
-                    top: 0;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-                    margin: auto;
-                    display: block;
-                    margin-top: 15vw;
-                }
-
-
-            }
-
-            .nav_bottom {
-                flex-direction: row;
-                place-items: center;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                margin-top: 10vw;
-
-                & a {
-                    padding-right: 8vw;
-                    padding-left: 8vw;
-                    font: {
-                        family: $p;
-                        size: 4.5vw;
-                        weight: 600;
-                    }
-                    text-decoration: none;
-                    color: $footer-links;
-                }
-            }
-
-            .nav_socials {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-top: 25vw;
-
-                & img {
-                    padding-left: 3.5vw;
-                    padding-right: 3.5vw;
-                }
-            }
-        }
+      }
     }
+
+    .middle {
+      display: flex;
+      flex-direction: row;
+      .egg {
+        width: 50%;
+        img {
+            width: 50vw;
+            margin-left: 50vw;
+        }
+      }
+
+      .brand {
+        position: absolute;
+        width: 50%;
+        text-align: center;
+        height: auto;
+
+
+        h1 {
+          color: #24303e;
+          font-family: $titles;
+          font-weight: 900;
+          font-size: calc(10px + 4vw);
+          margin-left: 2vw;
+          margin-right: 25vw;
+        }
+
+        p {
+          font-family: $p;
+          font-weight: 600;
+          color: #808397;
+          padding-top: 5vw;
+          line-height: 7vw;
+          font-size: calc(8px + 3vw);
+        }
+      }
+    }
+  }
 }
