--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 
 @media screen and (min-width: 769px) {
   body {
-    width: 99%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     list-style: none;
@@ -18,6 +18,20 @@
     place-content: center;
     vertical-align: center;
     width: 100vw;
+  }
+  .container .learn_more {
+    margin-top: calc(10px + 5vw);
+  }
+  .container .learn_more a {
+    text-decoration: none;
+    font-family: "Fraunces", serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #24303e;
+    font-size: 1.5vw;
+  }
+  .container .learn_more:visited {
+    color: #24303e;
   }
   .container .fake_header {
     background-color: rgb(62, 191, 255);
@@ -110,21 +124,44 @@
     width: 50%;
     text-align: center;
     height: auto;
+    margin-top: 10vw;
   }
   .container .middle .brand h1 {
     color: #24303e;
     font-family: "Fraunces", serif;
     font-weight: 900;
-    font-size: calc(10px + 4vw);
-    margin-left: 2vw;
-    margin-right: 25vw;
+    font-size: calc(6px + 2.5vw);
+    margin-left: 10vw;
+    text-align: left;
+    margin-right: 6vw;
   }
   .container .middle .brand p {
     font-family: "Barlow", sans-serif;
     font-weight: 600;
     color: #808397;
-    padding-top: 5vw;
-    line-height: 7vw;
-    font-size: calc(8px + 3vw);
+    padding-top: 3vw;
+    line-height: 2vw;
+    font-size: calc(4.5px + 1vw);
+    margin-right: 5vw;
+    margin-left: 10vw;
+    margin-bottom: 5vw;
+    text-align: left;
+  }
+  .container .middle .brand a::before {
+    content: "";
+    position: absolute;
+    width: 10.8vw;
+    height: 0.5vw;
+    border-radius: 28px;
+    background-color: #FAD400;
+    bottom: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: -0.2vw;
+  }
+  .container .middle .brand a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
   }
 }/*# sourceMappingURL=style.css.map */
