--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -356,7 +356,7 @@ $footer-links: #458d7e;
     width: 100vw;
 
     .learn_more {
-      margin-top: calc(10px + 5vw);
+      margin-top: calc(8px + 5vw);
 
       a {
         text-decoration: none;
@@ -503,18 +503,17 @@ $footer-links: #458d7e;
 
         a {
           &::before {
-            content: '';
+            content: "";
             position: absolute;
             width: 10.8vw;
-            height: .5vw;
+            height: 0.5vw;
             border-radius: 28px;
-            background-color: #FAD400;
+            background-color: #fad400;
             bottom: 0;
-            // left: calc(50% - 65px);
             transform-origin: right;
             transform: scaleX(0);
-            transition: transform .3s ease-in-out;
-            margin-bottom: -.2vw;
+            transition: transform 0.3s ease-in-out;
+            margin-bottom: -0.2vw;
           }
 
           &:hover::before {
@@ -522,7 +521,75 @@ $footer-links: #458d7e;
             transform: scaleX(1);
           }
         }
+      }
+    }
 
+    .upper {
+      display: flex;
+      flex-direction: row;
+      .glass {
+        width: 50%;
+        img {
+          width: 50vw;
+          margin-top: -0.35vw;
+        }
+      }
+      .audience {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        left: 0;
+        top: 0;
+        width: 50%;
+        text-align: center;
+        height: auto;
+        margin-top: 10vw;
+
+        h1 {
+          color: #24303e;
+          font-family: $titles;
+          font-weight: 900;
+          font-size: calc(5px + 2.5vw);
+          margin-left: 10vw;
+          text-align: left;
+          margin-right: 6vw;
+        }
+
+        p {
+          font-family: $p;
+          font-weight: 600;
+          color: #808397;
+          padding-top: 3vw;
+          line-height: 2vw;
+          font-size: calc(3px + 1vw);
+          margin-right: 5vw;
+          margin-left: 10vw;
+          margin-bottom: 1vw;
+          text-align: left;
+        }
+
+        a {
+          &::before {
+            content: "";
+            position: absolute;
+            width: 10.8vw;
+            height: 0.5vw;
+            border-radius: 28px;
+            background-color: #fad400;
+            bottom: 0;
+            // left: calc(50% - 65px);
+            transform-origin: right;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-in-out;
+            margin-bottom: -0.2vw;
+          }
+
+          &:hover::before {
+            transform-origin: left;
+            transform: scaleX(1);
+          }
+        }
       }
     }
   }
